--- a/debezium-tutorial/20-dbz-kafka-connect.html
+++ b/debezium-tutorial/20-dbz-kafka-connect.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Debezium with Kafka Connect :: Template Tutorial</title>
+    <title>Debezium with Kafka Connect :: Debezium Tutorial</title>
     <link rel="canonical" href="https://redhat-scholars.github.io/course-template/debezium-tutorial/20-dbz-kafka-connect.html">
     <link rel="prev" href="10-introduction.html">
     <link rel="next" href="21-dbz-server.html">
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <div class="navbar-brand">
       <a class="navbar-item" href="https://developers.redhat.com" target="_blank"><img src="../_/img/NewRHDFullLogo_4-color_white-wordmark.png" height="40px" alt="Red Hat Developer Program"></a>
-      <a class="navbar-item" style="font-size: 24px; color: white" href="https://redhat-scholars.github.io/course-template">Template Tutorial</a>
+      <a class="navbar-item" style="font-size: 24px; color: white" href="https://redhat-scholars.github.io/course-template">Debezium Tutorial</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
@@ -95,6 +95,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
+  <a href="index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="index.html">Debezium Tutorial</a></li>
