[CI] Publish Documentation for e6c2d1d4bfefcd0c44c7e8f94f27e5ab9a540720 - e6c2d1d4bfefcd0c44c7e8f94f27e5ab9a540720 🚀

--- a/debezium-tutorial/20-dbz-kafka-connect.html
+++ b/debezium-tutorial/20-dbz-kafka-connect.html
@@ -121,11 +121,13 @@
 <div class="paragraph">
 <p>The following exercise shows and explains how to configure a Debezium Source Connector for postgreSQL. The resulting CDC pipeline will capture all data change events that are occurring in a postgreSQL database table and propagate these changes into an Apache Kafka topic. The following illustration shows the overview and data flow of the demo scenario.</p>
 </div>
-<div class="paragraph">
-<p><strong>TODO: add picture here&#8230;&#8203;</strong></p>
+<div class="imageblock">
+<div class="content">
+<img src="_images/dbz-tutorial-elementary-kafka-connect-example-basic.png" alt="Debezium with Kafka Connect Demo Scenario">
+</div>
 </div>
 <div class="paragraph">
-<p>The example will be based on running all required data infrastructure components as containers locally, either with Podman or Docker. <strong>It&#8217;s important to note, that all containers are configured as <em>single ephemeral instances</em> which means that all state and data is lost after shutting them down!</strong></p>
+<p>For the example all required data infrastructure components are run as containers locally, either with Podman or Docker. <strong>It&#8217;s important to note, that all containers are configured as <em>single ephemeral instances</em> which means that all state and data is lost after shutting them down!</strong></p>
 </div>
 </div>
 </div>
