[CI] Publish Documentation for a3e7adc9588be51fac5746b6d6206c2566076f51 - a3e7adc9588be51fac5746b6d6206c2566076f51 🚀

--- a/debezium-tutorial/10-introduction.html
+++ b/debezium-tutorial/10-introduction.html
@@ -82,6 +82,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="21-dbz-server.html">Debezium Server</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="22-dbz-ui.html">Debezium UI</a>
+  </li>
 </ul>
   </li>
 </ul>
