--- a/debezium-tutorial/index.html
+++ b/debezium-tutorial/index.html
@@ -81,6 +81,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="21-dbz-server.html">Debezium Server</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="22-dbz-ui.html">Debezium UI</a>
+  </li>
 </ul>
   </li>
 </ul>
@@ -144,6 +147,9 @@
 </li>
 <li>
 <p><a href="21-dbz-server.html" class="xref page">Debezium Server</a></p>
+</li>
+<li>
+<p><a href="22-dbz-ui.html" class="xref page">Debezium UI</a></p>
 </li>
 </ul>
 </div>
