--- a/debezium-tutorial/20-dbz-kafka-connect.html
+++ b/debezium-tutorial/20-dbz-kafka-connect.html
@@ -82,6 +82,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="21-dbz-server.html">Debezium Server</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="22-dbz-ui.html">Debezium UI</a>
+  </li>
 </ul>
   </li>
 </ul>
