[CI] Publish Documentation for 4073ceeea17b197db6b1d84ea0aad781b924e4bf - 4073ceeea17b197db6b1d84ea0aad781b924e4bf 🚀

--- a/debezium-tutorial/20-dbz-kafka-connect.html
+++ b/debezium-tutorial/20-dbz-kafka-connect.html
@@ -168,14 +168,14 @@
 </div>
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name zookeeper --pod dbz quay.io/debezium/zookeeper:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name zookeeper --pod dbz quay.io/debezium/zookeeper:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
 <div class="tab-pane" aria-labelledby="tabset1_docker">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name zookeeper -p 2181:2181 -p 2888:2888 -p 3888:3888 quay.io/debezium/zookeeper:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name zookeeper -p 2181:2181 -p 2888:2888 -p 3888:3888 quay.io/debezium/zookeeper:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
@@ -199,14 +199,14 @@
 <div class="tab-pane" aria-labelledby="tabset2_podman">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name kafka --pod dbz quay.io/debezium/kafka:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name kafka --pod dbz quay.io/debezium/kafka:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
 <div class="tab-pane" aria-labelledby="tabset2_docker">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name kafka -p 9092:9092 --link zookeeper:zookeeper quay.io/debezium/kafka:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name kafka -p 9092:9092 --link zookeeper:zookeeper quay.io/debezium/kafka:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
@@ -230,14 +230,14 @@
 <div class="tab-pane" aria-labelledby="tabset3_podman">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name postgres --pod dbz -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres quay.io/debezium/example-postgres:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name postgres --pod dbz -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres quay.io/debezium/example-postgres:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
 <div class="tab-pane" aria-labelledby="tabset3_docker">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres quay.io/debezium/example-postgres:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres quay.io/debezium/example-postgres:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
@@ -261,14 +261,14 @@
 <div class="tab-pane" aria-labelledby="tabset4_podman">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name connect --pod dbz -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses quay.io/debezium/connect:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name connect --pod dbz -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses quay.io/debezium/connect:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
 <div class="tab-pane" aria-labelledby="tabset4_docker">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name connect -p 8083:8083 -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses --link kafka:kafka --link postgres:postgres quay.io/debezium/connect:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name connect -p 8083:8083 -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses --link kafka:kafka --link postgres:postgres quay.io/debezium/connect:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
@@ -469,14 +469,14 @@ Server: Jetty(9.4.48.v20220622)
 <div class="tab-pane" aria-labelledby="tabset6_podman">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name watcher --pod dbz quay.io/debezium/kafka:2.2 watch-topic -a -k dbserver1.inventory.customers</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name watcher --pod dbz quay.io/debezium/kafka:2.2.0.Final watch-topic -a -k dbserver1.inventory.customers</code></pre>
 </div>
 </div>
 </div>
 <div class="tab-pane" aria-labelledby="tabset6_docker">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name watcher --link zookeeper:zookeeper --link kafka:kafka quay.io/debezium/kafka:2.2 watch-topic -a -k dbserver1.inventory.customers</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name watcher --link zookeeper:zookeeper --link kafka:kafka quay.io/debezium/kafka:2.2.0.Final watch-topic -a -k dbserver1.inventory.customers</code></pre>
 </div>
 </div>
 <div class="listingblock console-output">
@@ -811,14 +811,14 @@ INSERT 0 1
 <div class="tab-pane" aria-labelledby="tabset8_podman">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name connect --pod dbz -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses quay.io/debezium/connect:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">podman run -it --rm --name connect --pod dbz -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses quay.io/debezium/connect:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
 <div class="tab-pane" aria-labelledby="tabset8_docker">
 <div class="listingblock console-input">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name connect -p 8083:8083 -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses --link zookeeper:zookeeper --link kafka:kafka --link postgres:postgres quay.io/debezium/connect:2.2</code></pre>
+<pre class="highlightjs highlight"><code class="language-adoc hljs" data-lang="adoc">docker run -it --rm --name connect -p 8083:8083 -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses --link zookeeper:zookeeper --link kafka:kafka --link postgres:postgres quay.io/debezium/connect:2.2.0.Final</code></pre>
 </div>
 </div>
 </div>
